--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-id-swiper": "^4.0.0",
+    "react-scripts": "3.4.1",
+    "styled-components": "^5.1.1",
+    "swiper": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
