cart functionality added

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
     "styled-components": "^5.1.1",
+    "use-immer": "^0.4.1",
     "yup": "^0.29.1"
   },
   "scripts": {
