--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "formik": "^2.1.4",
     "immer": "^7.0.5",
     "node-sass": "^4.14.1",
+    "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.1.1",
     "react-dom": "^16.13.1",
