--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
+    "react-select": "^3.1.0",
     "styled-components": "^5.1.1",
     "use-immer": "^0.4.1",
     "yup": "^0.29.3"
